--- a/springboot-05-web/src/main/resources/templates/index.html
+++ b/springboot-05-web/src/main/resources/templates/index.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" type="text/css" th:href="@{test.css}">
-    <script th:src="@{static.js}" type="text/javascript"></script>
+    <link rel="stylesheet" type="text/css" th:href="@{file/test.css}">
+    <script th:src="@{file/static.js}" type="text/javascript"></script>
 </head>
 <body>
 <div class="index-title">
   首页
 </div>
+<p th:text="${msg}"/>
+<a th:href="@{/main?user=123}">跳转</a>
 <div th:text="#{login.tip}"></div>
 <a th:href="@{/index.html(l='zh_CN')}">中文</a>
 <a th:href="@{/index.html(l='en_US')}">English</a>
